# ona-app

./: .gitignore  Anchor.toml  README.md  mango_instructions.rs  notes.md
app/: idl.json  next.config.js  package-lock.json  package.json
app/common/: Utils.ts
app/components/: ActiveTrades.tsx  AuthLayout.tsx  AutoConnectProvider.tsx  Button.tsx  CancelAllOrdersModal.tsx  Container.tsx  CreateUserAccountModal.tsx  DepositToMangoModal.tsx  FinishedTrades.tsx  Footer.tsx  Form.tsx  FundTradeModal.tsx  FundingTrades.tsx  Header.tsx  Hero.tsx  Layout.tsx  Logo.tsx  MarketCloseModal.tsx  StudentIntroList.tsx  Trade.tsx  TradeLayout.tsx  Trades.tsx  TxStatus.tsx  WalletContextProvider.tsx
app/components/ui/: styled-icon.tsx
app/models/: Globals.ts  MangoAccount.ts  StudentIntro.ts  Trade.ts  User.ts
app/pages/: _app.tsx  active.tsx  admin.tsx  finished.tsx  index.tsx  welcome.tsx
app/pages/profile/: index.tsx  mine.tsx  unregistered.tsx
app/pages/trades/: [slug].tsx  index.tsx  (+1 more)
app/scripts/: airdrop.js  package-lock.json  package.json
app/styles/: globals.css
programs/tanto/: Cargo.toml
programs/tanto/src/: errors.rs  lib.rs
programs/tanto/src/instructions/: cancel_perp_order_mango.rs  create_mango_account.rs  create_trade.rs  create_user.rs  deposit_mango_account.rs  fund_trade.rs  global_state.rs  market_close_perp_orders_mango.rs  mod.rs  place_perp_order_mango.rs  settle_trade.rs  start_trade.rs  withdraw_from_mango_account.rs  withdraw_funds.rs
programs/tanto/src/state/: global.rs  mod.rs  trade.rs  trade_funding.rs  user.rs
tests/: tanto.ts
(+2 files in other folders)
