[package]
name = "ona"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ona"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["development"]
development = []
production = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
num-traits = "0.2"
num-derive = "0.3"
mango = { version = "3.5.1", git = "https://github.com/blockworks-foundation/mango-v3.git", default-features=false, features = ["no-entrypoint"] }
